# windows-shortcuts

./: .gitignore  Cargo.toml  README.md  build.rs  config.txt  hdpi_plotting.exe.manifest.xml  hdpi_plotting.rc
WinShortcuts/: WinShortcuts.sln
WinShortcuts/WinShortcuts/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  WinShortcuts.csproj
WinShortcuts/WinShortcuts/Services/: INotificationService.cs  ITrayService.cs  ServiceExtensions.cs
src/: adb.rs  app.rs  config.rs  constants.rs  inputs.rs  key_events.rs  lib.rs  magic_packet.rs  main.rs  main_page.rs  monitors.rs  night_light.rs  registry.rs  screen.rs  server.rs  shortcuts.rs  startup.rs  trayicon.rs  utils.rs  xinput_page.rs
src/screen/: capture.rs  d3d.rs  display_info.rs  modes.rs
src/utils/: adb.rs  clipboard.rs  errors.rs  explorer.rs  inputs.rs  instance.rs  macros.rs  magic_packet.rs  mod.rs  monitors.rs  night_light.rs  other_functions.rs  others.rs  registry.rs
